bubbles-app/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bubbles-app
  name: bubbles-app
  namespace: iae-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubbles-app
  strategy: {}
  template:
    metadata:
      labels:
        app: bubbles-app
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bubbles-app
