bubbles-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bubbles-app
  name: bubbles-app
  namespace: iae-staging
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bubbles-app
