bubbles-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bubbles-app
  name: bubbles-app
  namespace: iae-staging
spec:
  host: "PATCH_ME"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bubbles-app
    weight: 100
